feat: new update all

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,51 @@ html, body {
     overflow-y: auto;
 }
 
+/* Custom styling for react-date-range */
+.rdrCalendarWrapper {
+    font-family: 'Poppins', sans-serif !important;
+}
+
+.rdrDateDisplayWrapper {
+    background-color: #f3f4f6;
+}
+
+.rdrMonthAndYearWrapper {
+    padding-top: 0;
+}
+
+.rdrDay:not(.rdrDayPassive) .rdrInRange,
+.rdrDay:not(.rdrDayPassive) .rdrStartEdge,
+.rdrDay:not(.rdrDayPassive) .rdrEndEdge,
+.rdrDay:not(.rdrDayPassive) .rdrSelected {
+    background-color: #2979ff !important;
+}
+
+.rdrDayToday .rdrDayNumber span:after {
+    background: #2979ff !important;
+}
+
+/* Mobile menu animation */
+@media (max-width: 640px) {
+    .mobile-menu-enter {
+        transform: translateX(-100%);
+    }
+    
+    .mobile-menu-enter-active {
+        transform: translateX(0);
+        transition: transform 300ms ease-in-out;
+    }
+    
+    .mobile-menu-exit {
+        transform: translateX(0);
+    }
+    
+    .mobile-menu-exit-active {
+        transform: translateX(-100%);
+        transition: transform 300ms ease-in-out;
+    }
+}
+
 .line-clamp-3 {
     display: -webkit-box;
     -webkit-line-clamp: 3;
